--- a/index.html
+++ b/index.html
@@ -13,15 +13,13 @@
         <h1>Alarm Clock</h1>
         <h2>Current Time:</h2>
         <h2 id="currentTime"></h2>
-        <form class="set-alarm form-group">
+        <form id="alarm" class="set-alarm form-group">
           <label for="set-alarm">Set alarm:</label>
           <input type="time" id="set-alarm"/>
           <button class="btn btn-success" type="submit">Set alarm</button>
         </form>
-        <script src="moment.js"></script>
-<script>
-    moment().format('MMMM Do YYYY, h:mm:ss a');
-</script>
+        <h2>Alarm set:</h2>
+        <h2 id="alarm-set"></h2>
       </div>
     </div>
   </body>
